; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_usb_serial.c_ucom_start_transfers.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_usb_serial.c_ucom_start_transfers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucom_softc = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ucom_softc*)*, i32 (%struct.ucom_softc*)* }

@UCOM_FLAG_HL_READY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ucom_softc*)* @ucom_start_transfers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ucom_start_transfers(%struct.ucom_softc* %0) #0 {
  %2 = alloca %struct.ucom_softc*, align 8
  store %struct.ucom_softc* %0, %struct.ucom_softc** %2, align 8
  %3 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %4 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 8
  %6 = load i32, i32* @UCOM_FLAG_HL_READY, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %40

10:                                               ; preds = %1
  %11 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %12 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %11, i32 0, i32 1
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  %15 = load i32 (%struct.ucom_softc*)*, i32 (%struct.ucom_softc*)** %14, align 8
  %16 = icmp ne i32 (%struct.ucom_softc*)* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %10
  %18 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %19 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %18, i32 0, i32 1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32 (%struct.ucom_softc*)*, i32 (%struct.ucom_softc*)** %21, align 8
  %23 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %24 = call i32 %22(%struct.ucom_softc* %23)
  br label %25

25:                                               ; preds = %17, %10
  %26 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %27 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %26, i32 0, i32 1
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = load i32 (%struct.ucom_softc*)*, i32 (%struct.ucom_softc*)** %29, align 8
  %31 = icmp ne i32 (%struct.ucom_softc*)* %30, null
  br i1 %31, label %32, label %40

32:                                               ; preds = %25
  %33 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %34 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %33, i32 0, i32 1
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 0
  %37 = load i32 (%struct.ucom_softc*)*, i32 (%struct.ucom_softc*)** %36, align 8
  %38 = load %struct.ucom_softc*, %struct.ucom_softc** %2, align 8
  %39 = call i32 %37(%struct.ucom_softc* %38)
  br label %40

40:                                               ; preds = %9, %32, %25
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
